--- a/FamilyLoader/FamilyLoader.csproj
+++ b/FamilyLoader/FamilyLoader.csproj
@@ -128,6 +128,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\Controls\ControlsResources.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\Controls\Done.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
