--- a/FamilyLoader/FamilyLoader.csproj
+++ b/FamilyLoader/FamilyLoader.csproj
@@ -47,6 +47,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>False</Private>
@@ -67,6 +68,11 @@
     <Compile Include="Loader.cs" />
     <Compile Include="Placer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Quad.cs" />
     <Compile Include="RevitCommand.cs" />
     <Compile Include="Views\Commands\CloseCommand.cs" />
@@ -96,6 +102,9 @@
     <Compile Include="Views\Controls\Place.xaml.cs">
       <DependentUpon>Place.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Controls\Waiter.xaml.cs">
+      <DependentUpon>Waiter.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
@@ -110,6 +119,7 @@
   <ItemGroup>
     <Content Include="FamilyLoader.addin" />
     <Content Include="Notes.txt" />
+    <Resource Include="Resources\Spinner.gif" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Views\Controls\ArrowDown.xaml">
@@ -144,6 +154,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\Controls\Waiter.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -152,6 +166,13 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
